# bwsync

./: .gitignore  CLAUDE.md  README.md  bwsync_product_spec.md  pyproject.toml  requirements.txt  setup-protections.sh
bwsync/: __init__.py  bitwarden.py  cli.py  config.py  db.py  engine.py  schema.py
bwsync/sources/: __init__.py  base.py  chrome.py  icloud.py
bwsync/tui/: __init__.py  app.py
bwsync/tui/screens/: audit.py  conflicts.py  dashboard.py
bwsync/tui/widgets/: source_panel.py  status_bar.py
docs/: TEST-PLAN.md  index.html  networking-issues.html
hooks/: pre-commit  pre-push
scripts/: bw_serve.sh  chrome_profile_inventory.py  emergency_backup.py  extract_chrome_passwords.py  push-check.sh
tests/: test_bitwarden.py  test_chrome_source.py  test_db.py  test_engine.py  test_icloud_source.py  test_schema.py
